code as good as default receiver

--- a/player.html
+++ b/player.html
@@ -35,7 +35,8 @@ The overlay layer holds:
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Cast Reference Receiver</title>
+  <!-- Change the title tag to your app's name to display as the details text on the Cast device picker -->
+  <title>Casting app name</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="player.css" />
   <script type="text/javascript" src="//www.gstatic.com/cast/sdk/libs/receiver/2.0.0/cast_receiver.js"></script>
@@ -50,7 +51,6 @@ The overlay layer holds:
         <div class="logo"></div>
         <div class="spinner"></div>
         <div class="watermark"></div>
-        <div class="splash"></div>
         <div class="gradient"></div>
         <div class="overlay">
             <div class="media-info">
@@ -75,14 +75,10 @@ The overlay layer holds:
             <div class="controls">
                 <span class="controls-play-pause"></span>
                 <span class="controls-cur-time"></span>
-                <span class="controls-time-seperator"> / </span>
                 <span class="controls-total-time"></span>
-                <div class="controls-progress-wrapper">
-                    <div class="controls-progress">
-                        <div class="controls-progress-inner progressBar"></div>
-                        <!--<div class="controls-progress-thumb"></div>-->
-                    </div>
-                    <img class="controls-progress-thumb" src="./assets/handle.png"/>
+                <div class="controls-progress">
+                    <div class="controls-progress-inner progressBar"></div>
+                    <div class="controls-progress-thumb"></div>
                 </div>
             </div>
         </div>
